--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,16 +1,33 @@
+@import "node_modules/bootstrap/scss/bootstrap";
+
 $theme-colors: (
     "primary": #ff3a52,
     "dark": #000000
 );
 
-@import "node_modules/bootstrap/scss/bootstrap";
-
 body {
-    padding-top:56px;
+    padding-top: 5rem;
 }
-.footer {
-    margin-top:3rem;
+.content {
+    padding: 3rem 1.5rem;
+    text-align: center;
 }
+
 .navbar {
     border-bottom:1px solid #eee;
+}
+
+.bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+@media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+    }
 }
